force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryScheduleJobFile__c/SOLXYZCSO001__ReportDeliveryScheduleJobFile__c.object-meta.xml
<CustomObject>
    <description>Manage the mapping of Field</description>
    <label>帳票配信スケジュールジョブファイル</label>
    <nameField>
        <label>識別名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>