force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryScheduleJobFile__c/fields/SOLXYZCSO001__DeliveryScheduleId__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__DeliveryScheduleId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>配信スケジュール</label>
    <referenceTo>SOLXYZCSO001__ReportDeliverySchedule__c</referenceTo>
    <relationshipLabel>配信スケジュールジョブファイル</relationshipLabel>
    <relationshipName>ReportDeliveryScheduleFiles</relationshipName>
    <type>Lookup</type>
</CustomField>