force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryScheduleJobFile__c/fields/SOLXYZCSO001__DeliveryScheduleJobId__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__DeliveryScheduleJobId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>配信スケジュールジョブ</label>
    <referenceTo>SOLXYZCSO001__ReportDeliveryScheduleJob__c</referenceTo>
    <relationshipLabel>配信スケジュールジョブファイル</relationshipLabel>
    <relationshipName>ReportDeliveryScheduleJobFiles</relationshipName>
    <type>Lookup</type>
</CustomField>