force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryScheduleJobFile__c/fields/SOLXYZCSO001__MailUrlBody__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__MailUrlBody__c</fullName>
    <description>ダウンロード通知メール本文</description>
    <label>ダウンロード通知メール本文</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>