force-app/main/default/objects/SOLXYZCSO001__ReportDeliveryScheduleJobFile__c/fields/SOLXYZCSO001__MailUrlMessage__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__MailUrlMessage__c</fullName>
    <description>ダウンロード通知メールメッセージ</description>
    <label>ダウンロード通知メールメッセージ</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>